# crescent-rs256-sd-example-app

./: .gitignore  .gitmodules  NOTICE.md  README.md  SUPPORT.md  azure-pipeline.yml  build_all.sh  cgmanifest.json  clean_all.sh  clippy_command.sh
.github/workflows/: CI.yml  codeql.yml
circuit_setup/: .gitignore  README.md
circuit_setup/circuits/: match_claim.circom
circuit_setup/circuits-mdl/: README.md  circomlib  main.circom  main_header_es256.circom.template  match_claim.circom  strings.circom
circuit_setup/circuits-mdl/ecdsa-p256/: bigint.circom  bigint_func.circom  curve.circom  ecdsa.circom  p256.circom  sha256.circom
circuit_setup/circuits/utils/: jwt.circom  sha.circom  sha256general.circom  utils.circom
circuit_setup/generated_files/: README.md
circuit_setup/inputs/: README.md
circuit_setup/inputs/mdl1/: claims.json  config.json  cred.txt  issuer.pub  proof_spec.json
circuit_setup/inputs/rs256/: claims.json  config.json  proof_spec.json
circuit_setup/inputs/rs256-db/: config.json  proof_spec.json
circuit_setup/inputs/rs256-sd/: config.json  proof_spec.json
circuit_setup/mdl-tools/: Cargo.toml  testmdl.cbor
circuit_setup/scripts/: crescent_helper.py  gen_mdl_device_key.sh  gen_x509_cert_chain.sh  jwk_gen.py  jwt_sign.py  openssl_ca.cnf  prepare_mdl_prover.py  prepare_mdl_setup.py  prepare_setup.py  run_setup.sh
creds/: Cargo.toml
creds/benches/: ecc_bench.rs  proof_benchmark.rs  range_bench.rs
creds/src/: daystamp.rs  device.rs  dlog.rs  groth16rand.rs  lib.rs  main.rs  prep_inputs.rs  rangeproof.rs  structs.rs  utils.rs  wasm_lib.rs
creds/test-vectors/: README.md
ecdsa-pop/: .gitignore  Cargo.toml  README.md
ecdsa-pop/neptune/: Cargo.toml  README.md
ecdsa-pop/neptune/benches/: synthesis.rs
ecdsa-pop/neptune/src/: circuit.rs  circuit2.rs  circuit2_witness.rs
ecdsa-pop/neptune/src/sponge/: circuit.rs
ecdsa-pop/src/: ecc.rs  errors.rs  lib.rs  poseidon.rs  utils.rs
ecdsa-pop/src/emulated/: README.md  field_element.rs  field_hints.rs  field_ops.rs  util.rs
forks/Spartan-t256/: Cargo.toml  README.md
forks/Spartan-t256/circ_fields/: Cargo.toml  README.md
forks/Spartan-t256/circ_fields/ff-derive-num/: FORKED.md
forks/Spartan-t256/circ_fields/src/: ff_field.rs  lib.rs
forks/Spartan-t256/circ_fields/src/t256/: mod.rs
forks/Spartan-t256/circ_fields/src/t256/curves/: mod.rs
forks/Spartan-t256/circ_fields/src/t256/fields/: fq.rs  fr.rs  tests.rs
forks/Spartan-t256/circ_fields/src/t256/hash_to_curve/: mod.rs
forks/Spartan-t256/circ_fields/src/t256/macros/: derive_conversion.rs  mod.rs
forks/Spartan-t256/circ_fields/src/t256/utils/: helper.rs
forks/Spartan-t256/profiler/: nizk.rs
forks/Spartan-t256/src/: commitments.rs  dense_mlpoly.rs  group.rs  lib.rs  math.rs  r1csinstance.rs  r1csproof.rs  random.rs  sparse_mlpoly.rs  sumcheck.rs  transcript.rs  unipoly.rs
forks/Spartan-t256/src/bellpepper/: mod.rs  r1cs.rs  shape_cs.rs  solver.rs  test_shape_cs.rs
forks/Spartan-t256/src/nizk/: bullet.rs  ipa_bases.rs  mod.rs
forks/Spartan-t256/src/scalar/: mod.rs  scalar.rs
forks/ark-poly-commit/: .cargo_vcs_info.json  Cargo.toml  README.md
forks/ark-poly-commit/src/: lib.rs
forks/circom-compat/: Cargo.toml
forks/groth16/src/: data_structures.rs  generator.rs  lib.rs
forks/halo2curves/: README-fork
forks/halo2curves/src/: arithmetic.rs  msm.rs  serde.rs
mopro-example-app/: .gitignore  Cargo.toml  Config.toml
mopro-example-app/flutter/: .gitignore  pubspec.yaml
mopro-example-app/flutter/assets/crescent/: README.md
mopro-example-app/flutter/integration_test/: plugin_integration_test.dart
mopro-example-app/flutter/lib/: crescent_asset_loader.dart  main.dart
mopro-example-app/flutter/mopro_flutter_plugin/android/src/main/kotlin/com/example/mopro_flutter/: MoproFlutterPlugin.kt
mopro-example-app/flutter/mopro_flutter_plugin/android/src/main/kotlin/uniffi/mopro/: mopro.kt
mopro-example-app/flutter/mopro_flutter_plugin/ios/Classes/: MoproFlutterPlugin.swift  mopro.swift
mopro-example-app/flutter/mopro_flutter_plugin/ios/MoproBindings.xcframework/: Info.plist
mopro-example-app/flutter/mopro_flutter_plugin/ios/MoproBindings.xcframework/ios-arm64-simulator/Headers/mopro_example_app/: mopro_example_appFFI.h
mopro-example-app/flutter/mopro_flutter_plugin/lib/: mopro_flutter.dart  mopro_flutter_method_channel.dart  mopro_flutter_platform_interface.dart  mopro_types.dart
mopro-example-app/flutter/mopro_flutter_plugin/test/: mopro_flutter_method_channel_test.dart  mopro_flutter_test.dart
mopro-example-app/flutter/test/: crescent_test.dart
mopro-example-app/src/: lib.rs
sample/: Dockerfile  README.md  clean-sample.sh  sample.html  setup-sample.sh
sample/client/: .env  README.md  eslint.config.js  package-lock.json  package.json  rollup.config.js  setup_client.sh  tsconfig.json  wasmCheck.js
sample/client/manifests/: manifest.chrome.json  manifest.firefox.json
sample/client/public/: popup.css  popup.html
sample/client/src/: background.ts  byteReader.ts  cbor.ts  clientHelper.ts  config.ts  constants.ts  content.ts  cred.ts  indexeddb.ts  jwt.ts  listen.ts  mdoc.ts  popup.ts  schema.ts  types.d.ts  utils.ts  verifier.ts
sample/client/test/: issuer.html  verifier.html
sample/client_helper/: Cargo.toml  README.md  Rocket.toml  setup_client_helper.sh
sample/client_helper/src/: main.rs
sample/client_helper/static/: index.html
sample/common/: README.md  generate-keys.sh
sample/issuer/: Cargo.toml  README.md  Rocket.toml  setup_issuer.sh
sample/issuer/scripts/: generate-jwks.js
sample/issuer/src/: main.rs
sample/issuer/templates/: login.html.tera  welcome.html.tera
sample/setup_service/: Cargo.toml  README.md  Rocket.toml
sample/setup_service/scripts/: generate-dummy-jwt.sh  setup-service.sh
sample/setup_service/src/: common.rs  lib.rs  main.rs
sample/verifier/: Cargo.toml  README.md  Rocket.toml  setup_verifier.sh
sample/verifier/src/: main.rs
sample/verifier/templates/: index.html.tera  login.html.tera  resource.html.tera  signup1.html.tera  signup2.html.tera
(+15 files in other folders)
