[package]
name = "crescent"
version = "0.4.0"
edition = "2021"
default-run = "crescent"

[dependencies]
ark-crypto-primitives = { version = "=0.4.0" }
ark-ec = { version = "=0.4.1", default-features = false, features = [
    "parallel",
] }
ark-ff = { version = "=0.4.1", default-features = false, features = [
    "parallel",
    "asm",
] }
ark-std = { version = "=0.4.0", default-features = false, features = [
    "parallel",
] }
ark-bn254 = { version = "=0.4.0" }
ark-bls12-381 = "0.4.0"
ark-poly = { version = "=0.4.1", default-features = false, features = [
    "parallel",
] }
ark-relations = { version = "=0.4.0", default-features = false }
ark-serialize = { version = "=0.4.1", default-features = false }

merlin = { version = "3.0", default-features = false }

# json parsing
serde_json = {version = "1.0", features = ["preserve_order"]}
serde = { version = "1.0", features = ["derive"] }

# wasmer
num-bigint = { version = "=0.4.3", default-features = false, features = [
    "rand",
] }
num-traits = "0.2.14"

rand = ">=0.8.5"
sha2 = "0.10.8"
rayon = "1.7"
structopt = "0.3"
lazy_static = "1.5"
base64-url = "3.0"
jwt-simple = "0.12.10"
chrono = "0.4"

# Local dependencies
ark-circom = { path = "../forks/circom-compat" }
ark-groth16 = { path = "../forks/groth16", default-features = false, features = [
    "parallel",
] }
ark-poly-commit = { path = "../forks/ark-poly-commit", default-features = false, features = [
    "parallel",
] }


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "*"

[build-dependencies]
cargo-patch = "0.3"

[features]
print-trace = ["ark-std/print-trace"]

[[bench]]
name = "proof_benchmark"
harness = false

[[bench]]
name = "range_bench"
harness = false

[[bench]]
name = "ecc_bench"
harness = false


[profile.dev.package."*"]
opt-level = 3               # optimize dependencies, even in dev builds
debug-assertions = false    # We need this to work around a bug in Wasmer

