# cargo-features = ["edition2024"]
[package]
name = "spartan-t256"
version = "0.1.0"
authors = ["Srinath Setty", "Spartan Contributors", "Pui Yung Anna Woo <pywoo@umich.edu>", "Greg Zaverucha"]
edition = "2021"
description = "Fork of Spartan that uses the T-256 curve"
# readme = "README.md"
# license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]

[dependencies]
lazy_static = "1.4"
serde_bytes = { version = "0.11.14", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
circ_fields = { path = "circ_fields" }
curve25519-dalek = { version = "3.2.0", features = [
    "serde",
    "u64_backend",
    "alloc",
], default-features = false }
merlin = { version = "3.0.0", default-features = false }
rand = { version = "0.7.3", features = ["getrandom"], default-features = false }
digest = { version = "0.8.1", default-features = false }
sha3 = { version = "0.8.2", default-features = false }
byteorder = { version = "1.3.4", default-features = false }
rayon = { version = "1.7.0", optional = true }
serde = { version = "1.0.106", features = ["derive"], default-features = false }
bincode = { version = "1.3.3", default-features = false }
subtle = { version = "2.4", features = ["i128"], default-features = false }
zeroize = { version = "1.5", default-features = false }
itertools = { version = "0.10.0", default-features = false }
colored = { version = "2.0.0", default-features = false, optional = true }
flate2 = { version = "1.0.14" }
hex-literal = { version = "0.3" }
num-bigint-dig = "^0.7"
crrl = "0.9.0"

# deps to get the src/bellpepper code working
ff = { version = "0.13.0", features = ["derive"] }
bellpepper-core = { version="0.2.0", default-features = false }
bellpepper = { version="0.2.0", default-features = false }
rug = { version = "1.11", features = ["serde"] }


[dev-dependencies]
criterion = "0.3.1"
hex = "0.4.3"

[lib]
name = "spartan_t256"
path = "src/lib.rs"

# [[bin]]
# name = "snark"
# path = "profiler/snark.rs"
# required-features = ["std"]

[[bin]]
name = "nizk"
path = "profiler/nizk.rs"
required-features = ["std"]

# [[bench]]
# name = "snark"
# harness = false
# required-features = ["std"]

# [[bench]]
# name = "nizk"
# harness = false
# required-features = ["std"]

[features]
# default = ["std", "simd_backend"]
default = ["std"]
std = [
    "curve25519-dalek/std",
    "digest/std",
    "merlin/std",
    "rand/std",
    "sha3/std",
    "byteorder/std",
    "serde/std",
    "subtle/std",
    "zeroize/std",
    "itertools/use_std",
    "flate2/rust_backend",
]
# simd_backend = ["curve25519-dalek/simd_backend"]
multicore = ["rayon"]
profile = ["colored"]
